# ejemplos-curso-VD

./: README.md  dataicann_features.hdf  demanda_electrica.csv  demo1a_plot_basico.html  demo1a_plot_basico.py  demo1b_plot_basico_dataicann.html  demo1b_plot_basico_dataicann.py  demo1c_plot_basico_dataicann_orbitas.html  demo1c_plot_basico_dataicann_orbitas.py  demo1d_plot_basico_source.html  demo1d_plot_basico_source.py  demo1e_plot_basico_source_dataicann.html  demo1e_plot_basico_source_dataicann.py  demo1f_plot_basico_source_dataicann_dataframe.html  demo1f_plot_basico_source_dataicann_dataframe.py  demo2a_scatter_basico.html  demo2a_scatter_basico.py  demo2b_scatter_basico_escala_continua.html  demo2b_scatter_basico_escala_continua.py  demo2c_scatter_espiral_consumos.html  demo2c_scatter_espiral_consumos.py  demo2d_scatter_espiral_consumos_interactiva.html  demo2d_scatter_espiral_consumos_interactiva.py  demo2e_scatter_matricial_consumos_interactiva.html  demo2e_scatter_matricial_consumos_interactiva.py  demo2f_dataicann_tsne.html  demo2f_dataicann_tsne.py  demo3a_interaccion_callback_javascript.html  demo3a_interaccion_callback_javascript.py  demo3b_interaccion_callback_python.py  demo3c_streaming.py  demo3d_brushing_consumos.html  demo3d_brushing_consumos.py  demo3e_morphing_consumos.html  demo3e_morphing_consumos.py  generaapps.py  generafuentes.py  iris_con_categorias.csv  pyproject.toml  sandbox.py
