[project]
name = "ejemplos-curso-vd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bokeh>=3.8.2",
    "ipython>=9.10.0",
    "matplotlib>=3.10.8",
    "pandas>=3.0.1",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "tables>=3.11.0",
]
